--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,2 +1,15 @@
 spring.application.name=code
 
+spring.datasource.url=//172.21.96.239/inventory?usessl=false
+spring.datasource.username=root
+spring.datasource.password=4aESCsdhxHWcR8Yk1s9ow8LD
+
+spring.jpa.hibernate.dll-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
+
+sring.data.mongodb.uri=mongodb://root:SDyLiUlGBWfeoJrrhng2EnAW@172.21.102.27:27017/reviews?authSource=admin
+
+management.endpoint.health.show-details=always
+management.health.db.enabled=true
